<resources>
    <string name="app_name">eEormesse</string>
    <string name="app_tagline">one of the coolest way to shop is what you are about to experience today. Enjoy the experience here and now</string>
    <string name="app_version">1.0.0</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="mi_ecommerce">Mi-Ecommerce</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="become_a_member">Become a member!</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="login_instead"><font fgcolor='#000000'>Already have an account? </font> <font fgcolor='#3C7988'>Sign In.</font></string>
    <string name="register_instead"><font fgcolor='#000000'>Don\'t have an account? </font> <font fgcolor='#3C7988'>Sign Up Now.</font></string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_to_eeormesse">Welcome to eEormesse</string>
</resources>